rough draft of holding results as softref to clean them before we OOM